# curobo_feature_mapping

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: map_publisher.yaml  ur5e.urdf  ur5e.yml
scripts/: gen_robot_cfg.py
src/curobo_feature_mapping/: __init__.py  cli.py  map_publisher.py  motion_planner.py  planning_node.py  realsense_bag.py  ros2_source.py
src/ur_realsense_mapping/: __init__.py  cli.py  features.py  map_publisher.py  moveit_export.py  poses.py  realsense_bag.py  ros2_source.py
