[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ur_realsense_mapping"
version = "0.1.0"
description = "Volumetric mapping with cuRobo from a RealSense camera (bag file or ROS 2 topics) on a UR robot"
requires-python = ">=3.10"
dependencies = [
    # [cu13] matches the CUDA of PyPI's default torch wheels (2.12 = cu130) and
    # pulls cuda-core, which curobo's kernel backend needs at runtime.
    "nvidia-curobo[cu13]",
    "numpy",
    "torch",
    "tqdm",
    "imageio",
]

[project.optional-dependencies]
# Reading native RealSense .bag recordings.
realsense = ["pyrealsense2>=2.55"]
# C-RADIO feature mapping (model downloads via torch.hub on first use).
features = ["timm", "transformers", "torchvision", "einops"]
# Mesh decimation before publishing to MoveIt.
moveit = ["fast-simplification"]

[project.scripts]
ur-rs-map = "ur_realsense_mapping.cli:main"
ur-rs-map-publisher = "ur_realsense_mapping.map_publisher:main"

[tool.setuptools.packages.find]
where = ["src"]

# Resolve curobo from the local checkout when installing with uv.
# Pin updates by checking out a known-good commit in ../curobo.
[tool.uv.sources]
nvidia-curobo = { path = "../curobo", editable = true }
