[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "curobo_feature_mapping"
version = "0.1.0"
description = "Volumetric + feature mapping with cuRobo from arbitrary depth sources (bag file or ROS 2 topics), robot-agnostic"
requires-python = ">=3.10"
dependencies = [
    # [cu13] matches the CUDA of PyPI's default torch wheels (2.12 = cu130) and
    # pulls cuda-core, which curobo's kernel backend needs at runtime.
    "nvidia-curobo[cu13]",
    "numpy",
    "torch",
    "tqdm",
    "imageio",
]

[project.optional-dependencies]
# Reading native RealSense .bag recordings.
realsense = ["pyrealsense2>=2.55"]
# C-RADIO feature mapping (model downloads via torch.hub on first use).
features = ["timm", "transformers", "torchvision", "einops"]
# Mesh decimation before publishing to MoveIt.
moveit = ["fast-simplification"]

[project.scripts]
cfmap = "curobo_feature_mapping.cli:main"
cfmap-publisher = "curobo_feature_mapping.map_publisher:main"

[tool.setuptools.packages.find]
where = ["src"]

# Resolve curobo from the local checkout when installing with uv.
# Pin updates by checking out a known-good commit in ../curobo.
[tool.uv.sources]
nvidia-curobo = { path = "../curobo", editable = true }
